--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Pagination
+PAGINATION_USERS=20
+PAGINATION_POSTS=20
+
